--- a/templates/forms.html
+++ b/templates/forms.html
@@ -18,7 +18,7 @@
     <title>Forms</title>
 </head>
 <body>
-    <form action="http://localhost:5000/resultat" method="post" class="full-form">
+    <form action="http://localhost:5000/index" method="post" class="full-form" enctype="multipart/form-data">
         <h1>Formulaire pour un nouveau menu</h1>
         <div class="full-name">
             <div class="mb-1">
