--- a/static/css/templatemo-klassy-cafe.css
+++ b/static/css/templatemo-klassy-cafe.css
@@ -658,13 +658,16 @@ banner
 }
 
 #top .left-content {
-  background-image: url(../images/rectangle.png);
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-  width: 100%;
-  height: 100%;
+    background-image: url('/static/images/rectangle.png');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #top .left-content .inner-content {
@@ -923,20 +926,17 @@ menu
   overflow: hidden;
 }
 
-.card1 {
-  background-image: url(../images/menu-item-01.jpg);
-}
 .card2 {
-  background-image: url(../images/menu-item-02.jpg);
+  background-image: url('/static/images/menu-item-02.jpg');
 }
 .card3 {
-  background-image: url(../images/menu-item-03.jpg);
+  background-image: url('/static/images/menu-item-03.jpg');
 }
 .card4 {
-  background-image: url(../images/menu-item-04.jpg);
+  background-image: url('/static/images/menu-item-04.jpg');
 }
 .card5 {
-  background-image: url(../images/menu-item-05.jpg);
+  background-image: url('/static/images/menu-item-05.jpg');
 }
 
 .info {
@@ -1208,7 +1208,7 @@ reservation
 #reservation {
   margin-top: 120px;
   padding: 120px 0px;
-  background-image: url(../images/reservation-bg.jpg);
+  background-image: url('/static/images/reservation-bg.jpg')}});
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -1555,6 +1555,10 @@ responsive
   #top .left-content {
     text-align: center;
     padding: 25% 0px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   #about .right-content {
     margin-left: 0px;
